landing page & sms
1st iteration

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,43 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<header>
+		<title>Name</title>
+		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
+		<link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
+	</header>
+	<body>
+		<div class="container">
+			<div id="name">Name</div>		
+			<div id="blurb">We bring menstrual supply to homeless women when they need them.</div>
+			<div id="upcoming">
+				Upcoming Delivery Dates:
+			<table>
+				<tr>
+					<th>Location</th>
+					<th>Approximate time</th>
+					
+				</tr>
+				<tr>
+					<td>MSC Homeless Shelter</td>
+					<td>8PM</td>						
+				</tr>
+					<td>The Sanctuary</td>
+					<td>8:40PM</td>
+				<tr>
+					<td>Next Door Shelter</td>
+					<td>9PM</td>
+				</tr>	
+				<tr>
+					<td>Navigation Center</td>
+					<td>9:40PM</td>
+				</tr>						
+			</table>
+			</div>
+			<div id="text">Don't see a location near you?</div>
+			<div id="cta">
+				<a href="request.html">Request Delivery</a>
+			</div>
+		</div>
+		
+
+	</body>
 </html>
