--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,75 @@
-body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+	font-family: 'Oswald', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+#name{
+	font-size: 2em;
+	margin: 1em 0 0 1em;
+}
+
+.container{
+	background: url("https://static.pexels.com/photos/226460/pexels-photo-226460.jpeg") no-repeat center center fixed;
+	 /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  margin: auto;
+}
+
+#blurb{
+	text-align: center;
+	width: 80%;
+	font-size: 3.5em;
+	margin: .7em auto;
+}
+
+#upcoming, table{
+	margin: auto;
+	text-align: center;
+}
+
+#text{
+	text-align: center;
+	margin-top: 1.5em;
+}
+
+#cta{
+	font-size: 2em;
+	color: white;
+	background-color: #4CAF50;
+	width: 8em;
+	text-align: center;
+	border-radius: 1em;
+	margin: .3em auto 0;
+}
+
+#cta:hover{
+	background-color: white;
+}
+
+#forms{
+	text-align: center;
+	margin: 1em;
+}
+
+input{
+	margin-bottom: 1.5em;
+}
+
+a{
+	text-decoration: none;
+	color: white;
+}
+
+a:hover{
+	color: #4CAF50;
 }
