Add text system and change icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 	</header>
 	<body>
 		<div class="container">
-			<div id="name">Name</div>		
+			<div id="name">Name</div>
 			<div id="blurb">We bring menstrual supply to homeless women when they need them.</div>
 			<div id="upcoming">
 				Upcoming Delivery Dates:
@@ -14,30 +14,30 @@
 				<tr>
 					<th>Location</th>
 					<th>Approximate time</th>
-					
+
 				</tr>
 				<tr>
 					<td>MSC Homeless Shelter</td>
-					<td>8PM</td>						
+					<td>8PM</td>
 				</tr>
 					<td>The Sanctuary</td>
 					<td>8:40PM</td>
 				<tr>
 					<td>Next Door Shelter</td>
 					<td>9PM</td>
-				</tr>	
+				</tr>
 				<tr>
 					<td>Navigation Center</td>
 					<td>9:40PM</td>
-				</tr>						
+				</tr>
 			</table>
 			</div>
 			<div id="text">Don't see a location near you?</div>
 			<div id="cta">
-				<a href="request.html">Request Delivery</a>
+				<a href="request">Request Delivery</a>
 			</div>
 		</div>
-		
+
 
 	</body>
 </html>
