--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -4,11 +4,12 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/map.css' />
+    <meta http-equiv="refresh" content="60">
   </head>
   <body>
     <div id="nav">
       <h1><%= title %></h1>
-      <p>Welcome to <%= title %></p>
+      <p id="address"><%= location %></p>
     </div>
 
     <div id="content">
@@ -16,6 +17,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbD4TnXobioui4xPnHAttFuhhagzDoijU&callback=initMap">
     </script>
