Added name field

--- a/views/request.ejs
+++ b/views/request.ejs
@@ -8,6 +8,8 @@
 		<div class="container">
 			<div id="name">Name</div>
 			<div id="forms">
+				Your name:<br>
+				<input type="text" placeholder="first and/or last"><br>
 				Phone Number (if you have one):<br>
 				<input type="text" placeholder="ex) 6501234567"><br>
 				Address or description of your location:<br>
