Add info window

--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -9,6 +9,7 @@
   <body>
     <div id="nav">
       <h1><%= title %></h1>
+      <p id="name"><%= name %></p>
       <p id="address"><%= location %></p>
     </div>
 
