fixed styling things

--- a/views/request.ejs
+++ b/views/request.ejs
@@ -17,7 +17,7 @@
 			<input class="boxes" type="text" placeholder="ex) 6501234567">
 			<br>
 			<p class="fields">Address or description of your location:</p>
-			<textarea class="boxes" name="paragraph_text" cols="50" rows="10" placeholder="ex) 220 Market St. or McDonald's on Sutter St."></textarea>
+			<textarea class="boxes" name="paragraph_text" rows="8" placeholder="ex) 220 Market St. or McDonald's on Sutter St."></textarea>
 			<br>
 			<button onclick="location.href='../';" id="cta">
 				Submit
