--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 	<header>
 		<title>Name</title>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald:300,400" rel="stylesheet"> 
 		<!--<link href="https://fonts.googleapis.com/css?family=Oswald:300,600" rel="stylesheet">-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
