Make markers with database

--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html>
 <head>
-  <title>AppName - <%= title %></title>
+  <title>aXXess - <%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/driver.css' />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +11,13 @@
   <div class="inforow">
     <div class="infocolumn">
       <p>Next Delivery:</p>
-      <h1 id="clientName">Loading...</h1>
+      <h2 id="clientName">Loading...</h2>
       <p id="clientAddress">Loading...</p>
     </div>
   </div>
 
   <!-- Buttons -->
-  <div class="float-button" id="complete">
+  <div class="float-button" id="complete" onclick="complete()">
     <img src="img/star.png" />
   </div>
 
