--- a/public/stylesheets/driver.css
+++ b/public/stylesheets/driver.css
@@ -32,6 +32,7 @@ body {
   height: 75px;
   border-radius: 100px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  cursor: pointer;
 }
 
 #complete {
