updated color scheme

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<header>
-		<title>Name</title>
+		<title>aXXess || Helping homeless women have healthy periods</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald:300,400" rel="stylesheet"> 
 		<!--<link href="https://fonts.googleapis.com/css?family=Oswald:300,600" rel="stylesheet">-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
 	</header>
 	<body>
-		<div class="container-fluid oswald" id="name">
-			<a id="logo" href="#"><h1>Name</h1></a>
-		</div>
+		<nav class="navbar navbar-default" style="background:none;">
+			<div class="container-fluid oswald" id="name">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		        		<span class="icon-bar"></span>
+		        		<span class="icon-bar"></span>
+		        		<span class="icon-bar"></span>
+	    			</button>
+					<a class="navbar-brand" href="#" id="logo">aXXess</a>
+	    		</div>
+	    		<div class="navbar-collapse collapse navbar-right" id="myNavbar">
+				    <ul class="nav navbar-nav">
+					    <li><a href="#">About Us</a></li>
+					    <li><a href="request">Request a Delivery</a></li>
+				    </ul>
+				</div>
+			</div>
+		</nav>
 		<div class="container" id="blurb">
 			<h1>Every woman deserves the dignity of a healthy period.</h1>
 			<p>We bring menstrual supplies to homeless women when they need them.</p>
