--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 		        		<span class="icon-bar"></span>
 		        		<span class="icon-bar"></span>
 	    			</button>
-					<a class="navbar-brand" href="#" id="logo">aXXess</a>
+					<a class="navbar-brand" href="#" id="logo"><img src="/img/logo.png" width=150px></</a>
 	    		</div>
 	    		<div class="navbar-collapse collapse navbar-right" id="myNavbar">
 				    <ul class="nav navbar-nav">
