--- a/views/request.ejs
+++ b/views/request.ejs
@@ -1,6 +1,6 @@
 <html>
 	<header>
-		<title>Request a Dervice || aXXess</title>
+		<title>Request a Delivery || aXXess</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
@@ -16,7 +16,7 @@
 		        		<span class="icon-bar"></span>
 		        		<span class="icon-bar"></span>
 	    			</button>
-					<a class="navbar-brand" href="../" id="logo">aXXess</a>
+					<a class="navbar-brand" href="../" id="logo"><img src="/img/logo.png" width=150px></a>
 	    		</div>
 	    		<div class="navbar-collapse collapse navbar-right" id="myNavbar">
 				    <ul class="nav navbar-nav">
