Finish driver page

--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -10,9 +10,10 @@
   <!-- User Information -->
   <div class="inforow">
     <div class="infocolumn">
-      <p>Next Delivery:</p>
+      <p>Delivery to:</p>
       <h2 id="clientName">Loading...</h2>
-      <p id="clientAddress">Loading...</p>
+      <p id="clientAddress"></p>
+      <p id="distance"></p>
     </div>
   </div>
 
@@ -29,6 +30,8 @@
   <div id="content">
     <div id="map"></div>
   </div>
+
+  <div id="overlay"></div>
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
