--- a/public/stylesheets/driver.css
+++ b/public/stylesheets/driver.css
@@ -1,8 +1,10 @@
 /* Main */
+
 body {
   background: none;
-  background-color: #F5888D;
+  background-color: #fff;
   color: rgba(0, 0, 0, 0.75);
+  font-weight: bold;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -10,7 +12,7 @@ body {
 }
 
 .inforow {
-  height: 25vh;
+  height: 32.5vh;
   width: 100%;
 }
 
@@ -18,8 +20,32 @@ body {
   padding: 0.75% 5%;
 }
 
+#distance {
+  float: right;
+  font-size: 2em;
+  margin: 0;
+  padding: 0;
+  color: #DD8896;
+}
+
+/* Map */
+
 #content {
-  height: 75vh;
+  height: 67.5vh;
+  width: 100%;
+}
+
+#overlay {
+  position: fixed;
+  z-index: 50;
+  bottom: 0;
+  height: 67.5vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+#map {
+  height: 100%;
   width: 100%;
 }
 
@@ -31,24 +57,32 @@ body {
   width: 75px;
   height: 75px;
   border-radius: 100px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   cursor: pointer;
+  bottom: -10vh;
+  /*
+  animation-name: slideUp;
+  animation-duration: 1s;
+  animation-fill-mode: both;*/
 }
 
 #complete {
-  top: 20vh;
-  right: 150px;
-  background-color: #FFEB3B;
+  right: calc(45vw - 75px);
+  background-color: #DD8896;
 }
 
 #cancel {
-  top: 20vh;
-  right: 50px;
-  background-color: #F44336;
+  left: calc(45vw - 75px);
+  background-color: #757575;
 }
 
-/* Map */
-#map {
-  height: 100%;
-  width: 100%;
+/* Animation */
+
+@keyframes slideUp {
+  from {
+     bottom: -10vh;
+  }
+  to {
+     bottom: 2.5vh;
+  }
 }
