Add decline button

--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -22,7 +22,7 @@
     <img src="img/star.png" />
   </div>
 
-  <div class="float-button" id="cancel">
+  <div class="float-button" id="cancel" onclick="cancel()">
     <img src="img/cancel.png" />
   </div>
 
