--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html>
 <head>
-  <title>aXXess - <%= title %></title>
+  <title>aXXess || <%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/driver.css' />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
