--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -34,10 +34,9 @@
   <div id="overlay"></div>
 
   <!-- Scripts -->
+  <script type='text/javascript' src='javascripts/config.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbD4TnXobioui4xPnHAttFuhhagzDoijU&callback=initMap">
-  </script>
+  <script type='text/javascript' src='javascripts/googleapi.js'></script>
   <script src="javascripts/map.js"></script>
 </body>
 </html>
